--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
 <head>
   <meta name="google-site-verification" content="DkM8G_yQ-ASj24TR4luiSUXouZMIa23ZdShsBfs2QnM" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script>
-  !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(arguments)};
-  d=s.createElement(q);d.src='//d1l6p2sc9645hc.cloudfront.net/gosquared.js';q=
-  s.getElementsByTagName(q)[0];q.parentNode.insertBefore(d,q)}(window,document
-  ,'script','_gs');
-
-  _gs('GSN-972056-B');
-  _gs('set', 'anonymizeIP', true);
-</script>
+ 
   <title>Apple Customer Service</title>
   <style>
     body {
@@ -83,7 +75,7 @@
   <h1>Apple Customer Service</h1>
   <p>For any assistance or inquiries related to Apple products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Apple device, require assistance with your Apple account, or need guidance with Apple services, our experts are just a phone call away. Experience exceptional support from Apple.</p>
   <a href="tel:+1-(844)-692-2508" class="call-button">Contact Apple Support</a>
-  <p class="footer">© 2023 Apple Inc. All rights reserved.</p>
+  <p class="footer">Â© 2023 Apple Inc. All rights reserved.</p>
 
 </body>
 
